# -RASP-Formation

./: .gitignore  AI_MEMORY.md  CITATION.cff  PROMPT_SYSTEM.md  README.md  RESEARCH_GOAL.md  _test_full.txt  _test_out.txt  _test_out2.txt  check_summary.py  mypy.ini  pyproject.toml  ruff.toml  run_liveness_tests.py
.github/workflows/: ci.yml
configs/: default.yaml
configs/ablations/: no_cbf.yaml  no_escape.yaml  no_fsm.yaml  no_risk_adaptation.yaml  no_st_terms.yaml
configs/baselines/: apf.yaml  apf_lf.yaml  dwa.yaml  orca.yaml  st_apf.yaml
configs/scenarios/: s1_local_minima.yaml  s2_dynamic_crossing.yaml  s3_narrow_passage.yaml  s4_overtake_interaction.yaml  s5_dense_multi_agent.yaml
docs/: development.md  reproducibility.md
scripts/: analyze_s5_rl_attribution.py  benchmark_s5_rl.py  build_offline_paper_bundle.py  export_figures.py  replay_run.py  report_rl_training_status.py  reproduce_paper.py  run_experiment.py  train_rl_supervisor.py  watch_rl_supervisor.py
src/apflf/: __init__.py
src/apflf/analysis/: __init__.py  export.py  metrics.py  rl_attribution.py  stats.py
src/apflf/controllers/: __init__.py  adaptive_apf.py  apf.py  apf_lf.py  apf_st.py  base.py  dwa.py  lf.py  orca.py
src/apflf/decision/: __init__.py  (+3 more)
tests/: conftest.py  test_adaptive_apf.py  test_baseline_controllers.py  test_cbf_filter.py  test_config.py  test_dynamics.py  test_geometry.py  test_metrics.py  test_modes.py  test_offline_reporting.py  test_replay.py  test_reproduce_paper.py  test_reproducibility.py  test_rl_attribution.py  test_rl_supervisor.py  test_stats_export.py
(+22 files in other folders)
